# trading-bot

./: .gitignore  CMakeLists.txt  README.md
binapi/: CMakeLists.txt
binapi/include/binapi/: api.hpp  types.hpp
binapi/src/: api.cpp  types.cpp
fetchHistory/: index.js  package-lock.json
include/: ATR.hpp  Coin.hpp  Database.hpp  EMA.hpp  EMACross.hpp  FetchPairs.hpp  FetchUsers.hpp  Indicators.hpp  Params.h  RSI.hpp  Server.hpp  SwingLow.hpp  Tools.hpp  User.hpp
scanResult/: index.js  package.json
src/: ATR.cpp  CMakeLists.txt  Coin.cpp  Database.cpp  EMA.cpp  EMACross.cpp  Indicators.cpp  RSI.cpp  Server.cpp  SwingLow.cpp  User.cpp  main.cpp
src/binapi/include/binapi/: api.hpp
src/binapi/src/: api.cpp
src/fetchHistory/: .gitignore  index.js  package.json
src/include/: Database.hpp  Indicators.hpp  Params.h  RSI.hpp  Resistance.hpp  Server.hpp
src/scanResult/: package-lock.json
